Initial version of stream perf test for cf.

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,68 +1,40 @@
 ---
 applications:
   - name: rabbitmq-perf-test
-    path: ./target/pcf-perf-test-1.0-SNAPSHOT.jar
+    path: ./target/stream-perf-test-cf-1.0-SNAPSHOT.jar
     buildpacks: 
       - https://github.com/cloudfoundry/java-buildpack.git
     memory: 768M
     health-check-type: process
     services: [rmq]
     env:
-#      AUTOACK:
-#      AUTO_DELETE:
-#      BODY:
-#      BODY_CONTENT_TYPE:
-#      CMESSAGES:
-#      CONFIRM:
-#      CONFIRM_TIMEOUT:
+#      BATCH_SIZE:
+#      CODEC:
+#      COMPRESSION:
+#      CONFIRMS:
+#      CONSUMER_NAMES:
 #      CONSUMERS:
-#      CONSUMER_CHANNEL_COUNT:
-#      CONSUMER_LATENCY:
-#      CONSUMER_RATE:
-#      CTXSIZE:
-#      EXCHANGE:
-#      EXCLUSIVE:
-#      FLAG:
-#      FRAMEMAX:
-#      GLOBAL_QOS:
-#      HEARTBEAT:
-#      HEARTBEAT_SENDER_THREADS:
-#      ID:
-#      INTERVAL:
-#      LEGACY_METRICS:
-#      MESSAGE_PROPERTIES:
-#      METRICS_PROMETHEUS_ENDPOINT:
-#      METRICS_PROMETHEUS_PORT:
-#      METRICS_TAGS:
-#      MULTI_ACK_EVERY:
-#      NIO_THREADS:
-#      NIO_THREAD_POOL:
-#      OUTPUT_FILE:
-#      PMESSAGES:
-#      PREDECLARED:
+#      CONSUMERS_BY_CONNECTION:
+#      DELETE_STREAMS:
+#      LEADER_LOCATOR:
+#      LOAD_BALANCER:
+#      MAX_AGE:
+#      MAX_LENGTH_BYTES:
+#      MEMORY_REPORT:
+#      METRICS_BYTE_RATES:
+#      MONITORING_PORT:
+#      OFFSET:
+#      PRODUCER_NAMES:
 #      PRODUCERS:
-#      PRODUCER_CHANNEL_COUNT:
-#      PRODUCER_RANDOM_START_DELAY:
-#      PRODUCER_SCHEDULER_THREADS:
-#      PTXSIZE:
-#      PUBLISHING_INTERVAL:
-#      QOS:
-#      QUEUE:
-#      QUEUE_ARGS:
-#      QUEUE_PATTERN:
-#      QUEUE_PATTERN_FROM:
-#      QUEUE_PATTERN_TO:
-#      RANDOM_ROUTING_KEY:
+#      PRODUCERS_BY_CONNECTION:
 #      RATE:
-#      ROUTING_KEY:
-#      ROUTING_KEY_CACHE_SIZE:
-#      SASL_EXTERNAL:
+#      SERVER_NAME_INDICATION:
 #      SIZE:
-#      SKIP_BINDING_QUEUES:
-#      SLOW_START:
-#      TIME:
-#      TYPE:
-#      URI:
-#      URIS:
-#      USE_DEFAULT_SSL_CONTEXT:
-#      USE_MILLIS:
+#      STORE_EVERY:
+#      STREAM_COUNT:
+#      STREAM_MAX_SEGMENT_SIZE_BYTES:
+#      STREAMS:
+#      SUB_ENTRY_SIZE:
+#      SUMMARY_FILE:
+#      TRACKING_CONSUMERS_BY_CONNECTION:
+#      VERSION:
