--- a/.mvn/wrapper/maven-wrapper.properties
+++ b/.mvn/wrapper/maven-wrapper.properties
@@ -1,1 +1,15 @@
+#
+# RabbitMQ Stream Perf Test for CF
+#  Copyright 2021 VMware, Inc.
+#
+#  SPDX-License-Identifier: Apache-2.0
+#
+#  This product is licensed to you under the Apache 2.0 license (the "License").
+#  You may not use this product except in compliance with the Apache 2.0 License.
+#
+#  This product may include a number of subcomponents with separate copyright notices
+#  and license terms. Your use of these subcomponents is subject to the terms and
+#  conditions of the subcomponent's license, as noted in the LICENSE file.
+#
+
 distributionUrl=https://repo1.maven.org/maven2/org/apache/maven/apache-maven/3.6.1/apache-maven-3.6.1-bin.zip
