--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ RabbitMQ Stream Perf Test for CF
+  ~  Copyright 2021 VMware, Inc.
+  ~
+  ~  SPDX-License-Identifier: Apache-2.0
+  ~
+  ~  This product is licensed to you under the Apache 2.0 license (the "License").
+  ~  You may not use this product except in compliance with the Apache 2.0 License.
+  ~
+  ~  This product may include a number of subcomponents with separate copyright notices
+  ~  and license terms. Your use of these subcomponents is subject to the terms and
+  ~  conditions of the subcomponent's license, as noted in the LICENSE file.
+  -->
+
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.rabbitmq.pcf</groupId>
-    <artifactId>pcf-perf-test</artifactId>
+    <groupId>com.rabbitmq.stream.perf.cf</groupId>
+    <artifactId>stream-perf-test-cf</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <perf-test.version>2.13.0</perf-test.version>
+        <stream-client.version>0.4.0</stream-client.version>
         <spring-boot-maven-plugin.version>2.3.1.RELEASE</spring-boot-maven-plugin.version>
         <logback.version>1.2.3</logback.version>
         <junit.jupiter.version>5.7.0</junit.jupiter.version>
@@ -20,12 +34,6 @@
     </properties>
 
     <dependencies>
-
-        <dependency>
-            <groupId>com.rabbitmq</groupId>
-            <artifactId>perf-test</artifactId>
-            <version>${perf-test.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -39,6 +47,23 @@
             <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>stream-client</artifactId>
+            <version>${stream-client.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.rabbitmq.stream.perf.cf</groupId>
+            <artifactId>stream-perf-test-cf</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
@@ -49,7 +74,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot-maven-plugin.version}</version>
                 <configuration>
-                    <mainClass>com.rabbitmq.pcf.PcfPerfTest</mainClass>
+                    <mainClass>com.rabbitmq.stream.perf.cf.StreamPerfTest</mainClass>
                 </configuration>
                 <executions>
                     <execution>
