--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <spring-boot-maven-plugin.version>2.3.1.RELEASE</spring-boot-maven-plugin.version>
         <logback.version>1.2.3</logback.version>
         <junit.jupiter.version>5.7.0</junit.jupiter.version>
+        <junit.jupiter.system-stubs.version>1.2.0</junit.jupiter.system-stubs.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
     </properties>
@@ -49,6 +50,12 @@
         </dependency>
 
         <dependency>
+            <groupId>uk.org.webcompere</groupId>
+            <artifactId>system-stubs-jupiter</artifactId>
+            <version>${junit.jupiter.system-stubs.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.rabbitmq</groupId>
             <artifactId>stream-client</artifactId>
             <version>${stream-client.version}</version>
@@ -56,7 +63,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.6</version>
+            <version>2.8.8</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -108,7 +115,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>com.rabbitmq.perf.PerfTest</mainClass>
+                    <mainClass>com.rabbitmq.stream.perf.cf.StreamPerfTestCF</mainClass>
                 </configuration>
             </plugin>
         </plugins>
